--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
+    "mockdate": "^3.0.5",
     "typescript": "^5.1.3",
     "vitest": "^0.32.0"
   }
